# mhws-sound-tool

./: Cargo.toml  LICENSE  README.md  config.toml
010_template/: bnk_v145.bt  pck.bt
docs/: README_zh-CN.md
src/: bnk.rs  config.rs  ffmpeg.rs  main.rs  pck.rs  project.rs  transcode.rs  wwise.rs
test_files/: .gitignore  Wp00_Cmn_Effect.sbnk.1.X64
