[package]
name = "mhws-sound-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
colored = "3.0.0"
dialoguer = "0.11.0"
eyre = "0.6.12"
indexmap = "2.8.0"
indicatif = "0.17.11"
parking_lot = "0.12.3"
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.20"
