[package]
name = "mhws-sound-tool"
version = "0.2.1"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
env_logger = "0.11.8"
eyre = "0.6.12"
indexmap = "2.8.0"
indicatif = "0.17.11"
log = { version = "0.4.27", features = ["std"] }
parking_lot = "0.12.3"
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
toml = "0.8.20"

[features]
default = []
log_info = ["log/max_level_info"]
log_debug = ["log/max_level_debug"]
